syntax = "proto3";

package quote;

option go_package = "gateway/quote";

service QuoteService {
    // Quote
    rpc CreateQuote(CreateQuoteRequest) returns (CreateQuoteResponse);
    rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse);
    rpc ListQuotes(ListQuotesRequest) returns (ListQuotesResponse);
    rpc UpdateQuote(UpdateQuoteRequest) returns (UpdateQuoteResponse);
    rpc DeleteQuote(DeleteQuoteRequest) returns (GenericResponse);
    rpc ArchiveQuote(ArchiveQuoteRequest) returns (GenericResponse);
    rpc RestoreQuote(RestoreQuoteRequest) returns (GenericResponse);
    rpc TrashQuotes(TrashQuotesRequest) returns (GenericResponse);
    rpc DropQuote(DropQuoteRequest) returns (GenericResponse);
    rpc ContinueQuote(ContinueQuoteRequest) returns (GenericResponse);
    rpc ValidateQuote(ValidateQuoteRequest) returns (GenericResponse);
    rpc NegociateQuote(NegociateQuoteRequest) returns (NegociateQuoteResponse);
    rpc AcceptQuote(AcceptQuoteRequest) returns (GenericResponse);
    rpc RefuseQuote(RefuseQuoteRequest) returns (GenericResponse);

    // Line
    rpc CreateQuoteLine(CreateQuoteLineRequest) returns (CreateQuoteLineResponse);
    rpc GetQuoteLine(GetQuoteLineRequest) returns (GetQuoteLineResponse);
    rpc ListQuoteLines(ListQuoteLinesRequest) returns (ListQuoteLinesResponse);
    rpc ListUserQuoteLines(ListUserQuoteLinesRequest) returns (ListUserQuoteLinesResponse);
    rpc UpdateQuoteLine(UpdateQuoteLineRequest) returns (UpdateQuoteLineResponse);
    rpc DeleteQuoteLine(DeleteQuoteLineRequest) returns (GenericResponse);

    // Fee (premium catalog)
    rpc CreateFee(CreateFeeRequest) returns (CreateFeeResponse);
    rpc GetFee(GetFeeRequest) returns (GetFeeResponse);
    rpc ListFees(ListFeesRequest) returns (ListFeesResponse);
    rpc UpdateFee(UpdateFeeRequest) returns (UpdateFeeResponse);
    rpc ArchiveFee(ArchiveFeeRequest) returns (GenericResponse);

    // Comment
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
    rpc ListComments(ListCommentsRequest)   returns (ListCommentsResponse);
    rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
    rpc DeleteComment(DeleteCommentRequest) returns (GenericResponse);
}

message GenericResponse {
    bool success = 1;
    int32 code = 2;
}

message ValidationError {
    string field   = 1;
    string message = 2;
}

// ─── Quote ───────────────────────────────────────────────────────────────────

enum QuoteState {
    QUOTE_STATE_UNSPECIFIED = 0;
    QUOTE_STATE_DRAFT       = 1;
    QUOTE_STATE_SENT        = 2;
    QUOTE_STATE_VALIDATED   = 3;
    QUOTE_STATE_DROP        = 4;
    QUOTE_STATE_NEGOCIATION = 5;
    QUOTE_STATE_ACCEPTED    = 6;
    QUOTE_STATE_REFUSED     = 7;
}

message Quote {
    string     quote_id        = 1;
    string     user_id         = 2;
    string     name            = 3;
    bool       archived        = 4;
    QuoteState state           = 5;
    string     client_id       = 6;
    int32      address_id      = 7;
    int32      user_address_id = 8;
    string     issued_at       = 9;
    string     valid_until     = 10;
    string     payment_terms   = 11;
}

message CreateQuoteRequest {
    string user_id         = 1;
    string name            = 2;
    string client_id       = 3;
    int32  address_id      = 4;
    int32  user_address_id = 5;
}

message CreateQuoteResponse {
    bool success = 1;
    int32 code = 2;
    string quote_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message GetQuoteResponse {
    bool success = 1;
    int32 code = 2;
    Quote quote = 3;
    repeated QuoteLine lines = 4;
}

message QuoteFilters {
    string search = 1;
    repeated string states = 2;
    string client_id = 3;
    repeated string quote_ids = 4;
}

message ListQuotesRequest {
    string user_id = 1;
    bool include_archived = 2;
    int32 page = 3;
    int32 page_size = 4;
    QuoteFilters filters = 5;
    string sort_by = 6;
    string sort_direction = 7;
}

message ListQuotesResponse {
    bool success = 1;
    int32 code = 2;
    repeated Quote quotes = 3;
    int64 total = 4;
}

message UpdateQuoteRequest {
    string quote_id        = 1;
    string user_id         = 2;
    string name            = 3;
    string client_id       = 4;
    int32  address_id      = 5;
    int32  user_address_id = 6;
    string valid_until     = 7;
    string payment_terms   = 8;
}

message UpdateQuoteResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message DeleteQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message ArchiveQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message RestoreQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message TrashQuotesRequest {
    string user_id = 1;
}

message DropQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message ContinueQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message ValidateQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

message NegociateQuoteRequest {
    string quote_id = 1;
    string user_id = 2;
}

// NegociateQuoteResponse carries the client_id and quote name so the gateway can
// notify the client by email (sending the quote is part of entering negotiation).
message NegociateQuoteResponse {
    bool   success   = 1;
    int32  code      = 2;
    string client_id = 3;
    string name      = 4;
}

message AcceptQuoteRequest {
    string quote_id = 1;
    string user_id  = 2;
}

message RefuseQuoteRequest {
    string quote_id = 1;
    string user_id  = 2;
}

// ─── Line ────────────────────────────────────────────────────────────────────

message QuoteLine {
    string line_id = 1;
    string quote_id = 2;
    string type = 3;
    string name = 4;
    string quantity = 5;
    string unit = 6;
    int64 unit_price = 7;
    string data = 8;
    int32 position = 9;
    int32 tax_id = 10;
}

message CreateQuoteLineRequest {
    string quote_id = 1;
    string user_id = 2;
    string type = 3;
    string name = 4;
    string quantity = 5;
    string unit = 6;
    int64 unit_price = 7;
    string data = 8;
    int32 position = 9;
    int32 tax_id = 10;
}

message CreateQuoteLineResponse {
    bool success = 1;
    int32 code = 2;
    string line_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetQuoteLineRequest {
    string line_id = 1;
    string user_id = 2;
}

message GetQuoteLineResponse {
    bool success = 1;
    int32 code = 2;
    QuoteLine line = 3;
}

message ListQuoteLinesRequest {
    string quote_id = 1;
    string user_id = 2;
}

message ListQuoteLinesResponse {
    bool success = 1;
    int32 code = 2;
    repeated QuoteLine lines = 3;
}

message ListUserQuoteLinesRequest {
    string user_id = 1;
    bool include_archived = 2;
}

message ListUserQuoteLinesResponse {
    bool success = 1;
    int32 code = 2;
    repeated QuoteLine lines = 3;
}

message UpdateQuoteLineRequest {
    string line_id = 1;
    string user_id = 2;
    string type = 3;
    string name = 4;
    string quantity = 5;
    string unit = 6;
    int64 unit_price = 7;
    string data = 8;
    int32 position = 9;
    int32 tax_id = 10;
}

message UpdateQuoteLineResponse {
    bool success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message DeleteQuoteLineRequest {
    string line_id = 1;
    string user_id = 2;
}

// ─── Fee ─────────────────────────────────────────────────────────────────────

message Fee {
    string fee_id     = 1;
    string user_id    = 2;
    string category   = 3; // "fixed" | "service"
    string name       = 4;
    string unit       = 5;
    int64  unit_price = 6;
    int32  tax_id     = 7;
    bool   archived   = 8;
}

message CreateFeeRequest {
    string user_id    = 1;
    string category   = 2;
    string name       = 3;
    string unit       = 4;
    int64  unit_price = 5;
    int32  tax_id     = 6;
}

message CreateFeeResponse {
    bool   success = 1;
    int32  code = 2;
    string fee_id = 3;
    repeated ValidationError validation_errors = 4;
}

message GetFeeRequest {
    string fee_id = 1;
    string user_id = 2;
}

message GetFeeResponse {
    bool  success = 1;
    int32 code = 2;
    Fee   fee = 3;
}

message ListFeesRequest {
    string user_id = 1;
    bool   include_archived = 2;
}

message ListFeesResponse {
    bool  success = 1;
    int32 code = 2;
    repeated Fee fees = 3;
}

message UpdateFeeRequest {
    string fee_id     = 1;
    string user_id    = 2;
    string category   = 3;
    string name       = 4;
    string unit       = 5;
    int64  unit_price = 6;
    int32  tax_id     = 7;
}

message UpdateFeeResponse {
    bool  success = 1;
    int32 code = 2;
    repeated ValidationError validation_errors = 3;
}

message ArchiveFeeRequest {
    string fee_id = 1;
    string user_id = 2;
}

// ─── Comment ──────────────────────────────────────────────────────────────────

message QuoteLineComment {
    string comment_id  = 1;
    string line_id     = 2;
    string quote_id    = 3;
    string author_id   = 4;
    string author_name = 5;
    string body        = 6;
    string created_at  = 7;
    string updated_at  = 8;
}

message CreateCommentRequest {
    string line_id     = 1;
    string quote_id    = 2;
    string author_id   = 3;
    string author_name = 4;
    string body        = 5;
}

message CreateCommentResponse {
    bool             success = 1;
    int32            code    = 2;
    QuoteLineComment comment = 3;
}

message ListCommentsRequest {
    string line_id = 1;
}

message ListCommentsResponse {
    bool                      success  = 1;
    int32                     code     = 2;
    repeated QuoteLineComment comments = 3;
}

message UpdateCommentRequest {
    string comment_id = 1;
    string author_id  = 2;
    string body       = 3;
}

message UpdateCommentResponse {
    bool             success = 1;
    int32            code    = 2;
    QuoteLineComment comment = 3;
}

message DeleteCommentRequest {
    string comment_id = 1;
    string author_id  = 2;
}
